# VehicleDetection

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  Makefile  README.md  format_local_yolo.py  pyproject.toml
.github/workflows/: burn-in.yml  canary-model-deploy.yml  ci.yml  deploy-production.yml  deploy-staging.yml  flutter.yml  infrastructure.yml  load-test.yml  ml-pipeline.yml  production-launch.yml  release.yml  restore-drill.yml  security-scan.yml
apps/mobile_flutter/: README.md  analysis_options.yaml  build.yaml  l10n.yaml  pubspec.yaml
docs/: 00-overview.md  01-system-architecture.md  02-software-design.md  03-mobile-ui-design.md  04-database-design.md  05-ai-ml-pipeline.md  06-security-and-compliance.md  07-backup-and-recovery.md  08-deployment-readiness-checklist.md  09-features-roadmap-geonhwa.md  10-validation-methodology.md
infra/: docker-compose.yml  nats_bootstrap.py
infra/docker/: Dockerfile.aggregator  Dockerfile.auth_service  Dockerfile.config_service  Dockerfile.inference_worker  Dockerfile.ingest_service  Dockerfile.notification_service  Dockerfile.reporting_api
infra/runbooks/: README.md  general-secret-rotation.md  p1-compromised-credentials.md  p1-database-breach.md  p2-api-key-leak.md  p2-ddos-attack.md  p3-waf-alert-triage.md  production-launch.md
infra/scripts/: backup-status.sh  burn-in-monitor.sh  dr-failback.sh  dr-failover.sh  local_video_eval.py  prepare_local_models.py  production-smoke-test.sh
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
libs/db_models/: pyproject.toml
libs/db_models/db_models/: __init__.py
libs/observability/: pyproject.toml
libs/observability/observability/: __init__.py  logging.py  metrics.py  middleware.py  sanitization.py  security_events.py  tracing.py
libs/observability/tests/: test_logging.py  test_metrics.py  test_middleware.py  test_sanitization.py  test_security_events.py  test_tracing.py
libs/shared_contracts/: pyproject.toml
libs/test_utils/: pyproject.toml
libs/test_utils/test_utils/: __init__.py  factories.py
ml/: __init__.py  pyproject.toml
ml/best 2.mlpackage/: Manifest.json
ml/best 2.mlpackage/Data/com.apple.CoreML/: model.mlmodel
ml/best.mlpackage/: Manifest.json
ml/best.mlpackage/Data/com.apple.CoreML/: model.mlmodel
ml/best_saved_model/: fingerprint.pb  metadata.yaml
ml/data/: __init__.py  aihub091_to_greyeye.py  coco_to_greyeye.py  dataset.py  sampler.py  splits.py
ml/evaluation/: __init__.py  benchmark_latency.py  evaluate_classifier.py  evaluate_detector.py  evaluate_tracker.py
ml/export/: __init__.py  convert_coreml_to_tflite.py  export_classifier.py  export_detector.py  validate_export.py
ml/shared_contracts/: __init__.py  env.py  events.py  geometry.py  nats_dlq.py  nats_streams.py  pagination.py
ml/training/: __init__.py  augmentations.py  losses.py  train_classifier.py  train_detector.py
ml/training/config/: classifier_base.yaml  detector_base.yaml
notebooks/: train_classifier_colab.ipynb
runpod/: auto_calibration.py  calibration.py  config.py  custom_tracker.yaml  ocr.py  pipeline.py  requirements.txt  server.py  tasks_light.py  tasks_speed.py  tasks_transit.py  vlm.py
runpod/tests/: conftest.py  pytest.ini  test_integration.py  test_unit.py
scripts/: calibration_studio.py  measure_accuracy.py  seodang_calibration.json
scripts/sites/: seodang.json
services/auth_service/: pyproject.toml
services/auth_service/auth_service/: __init__.py  __main__.py  app.py  audit.py  dependencies.py  models.py  rbac.py  redis_client.py  settings.py  supabase_client.py  test_support.py  tokens.py
services/auth_service/auth_service/routes/: __init__.py  auth.py  users.py
services/auth_service/tests/: conftest.py  test_dependencies.py  test_rbac.py  test_routes_auth.py  test_routes_users.py  test_tokens.py
services/inference_worker/: pyproject.toml
services/inference_worker/inference_worker/: __init__.py  event_publisher.py  hard_examples.py  models.py  pipeline.py  redis_state.py  settings.py  worker.py
services/inference_worker/inference_worker/stages/: __init__.py  classifier.py  detector.py  line_crossing.py  smoother.py  tracker.py
services/inference_worker/tests/: conftest.py  test_classifier.py  test_detector.py  test_hard_examples.py  test_line_crossing.py  test_pipeline_integration.py  test_smoother.py  test_tracker.py
services/ingest_service/: pyproject.toml
services/ingest_service/ingest_service/: __init__.py  app.py  dependencies.py  models.py  nats_client.py  nats_streams.py  redis_client.py  settings.py
services/ingest_service/ingest_service/routes/: ingest.py
services/ingest_service/tests/: conftest.py  test_dependencies.py  test_health.py  test_models.py  test_nats_client.py  test_redis_client.py  test_routes_frames.py  test_routes_heartbeat.py  test_routes_sessions.py
services/notification_service/: pyproject.toml
services/notification_service/notification_service/: __init__.py  __main__.py  app.py  db.py  delivery.py  dependencies.py  models.py  nats_consumer.py  rule_engine.py  settings.py
services/notification_service/notification_service/routes/: alerts.py
services/notification_service/tests/: conftest.py  test_delivery.py  test_nats_consumer.py  test_routes_alerts.py  test_rule_engine.py
services/reporting_api/: pyproject.toml
services/reporting_api/reporting_api/: __init__.py  __main__.py  app.py  db.py  dependencies.py  export_engine.py  models.py  redis_client.py  settings.py  test_support.py
services/reporting_api/reporting_api/routes/: analytics.py  reports.py
services/reporting_api/tests/: conftest.py  test_db.py  test_export_engine.py  test_routes_analytics.py  test_routes_reports.py
supabase/: config.toml  seed.sql
tests/loadtest/: .env.loadtest.example  __main__.py  auth.py  config.py  frame_gen.py  locustfile.py  pyproject.toml  runner.py  scenario_backpressure.py  scenario_latency.py  scenario_mvp.py  scenario_pipeline.py  scenario_scale.py  stats.py  test_load.py
tmp/: local_video_eval.json
(+337 files in other folders)
