[project]
name = "db-models"
version = "0.1.0"
description = "GreyEye SQLAlchemy models and Alembic migrations"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "shared-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_models"]

[tool.uv.sources]
shared-contracts = { workspace = true }
