[project]
name = "test-utils"
version = "0.1.0"
description = "GreyEye shared test fixtures, factories, and helpers"
requires-python = ">=3.11"

dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "shared-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test_utils"]

[tool.uv.sources]
shared-contracts = { workspace = true }
