[project]
name = "auth-service"
version = "0.1.0"
description = "GreyEye Auth & RBAC Service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "supabase>=2.11",
    "PyJWT[crypto]>=2.9",
    "passlib[bcrypt]>=1.7",
    "redis>=5.0",
    "shared-contracts",
    "greyeye-observability",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "test-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_service"]

[tool.uv.sources]
shared-contracts = { workspace = true }
greyeye-observability = { workspace = true }
test-utils = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
