[project]
name = "reporting-api"
version = "0.1.0"
description = "GreyEye Reporting API — analytics queries and report export"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "PyJWT[crypto]>=2.9",
    "shared-contracts",
    "boto3>=1.35",
    "matplotlib>=3.9",
    "greyeye-observability",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "test-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reporting_api"]

[tool.uv.sources]
shared-contracts = { workspace = true }
greyeye-observability = { workspace = true }
test-utils = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
